@@ -1,3 +1,13 @@
+Wed Jan  2 23:30:33 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* lib/decompress.c (decompress_zlib), lib/linelength.c
+	  (get_line_length), lib/pipeline.c (passthrough), src/lexgrog.l
+	  (find_name), src/man.c (set_term, get_term, main,
+	  make_roff_command, format_display_and_save, format_display,
+	  display_catman, display), src/manconv.c (main), src/zsoelim.l
+	  (open_file): Use STDIN_FILENO, STDOUT_FILENO, and STDERR_FILENO
+	  macros rather than calling fileno.
+
 Wed Jan  2 16:46:46 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* src/accessdb.c (main), src/catman.c (main), src/globbing_test.c
